--- a/adic.css
+++ b/adic.css
@@ -67,7 +67,7 @@ nav ul li a:hover {
 /* Hero Section */
 .hero {
     height: 100vh;
-    background: url('1.jpg') no-repeat center center/cover;
+    background: url('https://github.com/burnernzetohost/adiportfolio/blob/main/1.jpg') no-repeat center center/cover;
     display: flex;
     align-items: center;
     justify-content: center;
